--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <title>
-            Hello, Informatica 7-8
+            Rodrigo Lopez Portafolio
         </title>
     </head>
     <body>
         <h1>
-            Hello, Informatica 7-8
+            Rodrigo Lopez
         </h1>
-        My name is Rodrigo
+        <p>I'm a studen of informatica class.</p>
     </body>
 </html>
