--- a/01-html-elements/index.html
+++ b/01-html-elements/index.html
@@ -9,6 +9,57 @@
         <!--Headings-->
         <h1>Main Heading</h1>
         <h2>For subtitles</h2>
-    </body>
+        <h6>The Smallest Heading</h6>
 
+        <!--Bold and italic elements-->
+        <p>
+            A <Strong>strong</Strong>word, a<b>bold </b> word, an <em>emphasized</em> word, and an <I>italic</I> word.
+        </p>
+
+        <!--Links-->
+        <p>Visit <a href="https://google.com"target="_black">V:</a></p>
+
+        <!--Lists (Unordered and ordered lists)-->
+        <ul>
+            <li>First item</li>
+            <li>Second item</li>
+            <li>Third item</li>
+        </ul>
+
+        <ol>
+            <li>First item</li>
+            <li>Second item</li>
+            <li>Third item</li>
+        </ol>
+
+        <!--Images-->
+        <img src="https://i.pinimg.com/236x/b7/9e/36/b79e36476d2fcd22023af0e91a018080.jpg"
+        <span>Hello!</span>
+
+        <!--Whitespace-->
+        <br>
+        <br>
+
+        <!--Tables-->
+        <table border="1">
+            <thead>
+                <th>Team</th>
+                <th>Number of Players</th>
+                <th>Points</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lobas</td>
+                    <td>13</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>Fray</td>
+                    <td>5</td>
+                    <td>-100</td>
+                </tr>
+            </tbody>
+
+        </table>
+    </body>
 </html>
