--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
             Rodrigo Lopez
         </h1>
         <p>I'm a studen of informatica class.</p>
+        <a href="/01-html-elements">HTML Elements</a>
     </body>
 </html>
