--- a/html-article/index.html
+++ b/html-article/index.html
@@ -17,6 +17,69 @@
         <h4><em>In a speech at Brigham Young University (BYU) — his first public address as President of The Church of Jesus Christ of Latter-day Saints — Dallin H. Oaks shared four ways to come closer to Jesus Christ.
 
 At the weekly campus devotional address on Tuesday, February 10, 2026, President Oaks first emphasized a well-known admonition that his predecessor, President Russell M. Nelson, shared in April 2018.</em></h4>
+            <iframe width="805" height="453" src="https://www.youtube.com/embed/bv-AQGCrKNI" title="&quot;Coming Closer to Jesus Christ&quot; | President Dallin H. Oaks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h3>Watch in Cantonese, French, German, Italian, Japanese, Korean, Mandarin, Portuguese, Russian and Spanish.</h3>
+    <h4>“In coming days,” President Nelson said, “it will not be possible to survive spiritually without the guiding, directing, comforting, and constant influence of the Holy Ghost.”
+
+“I feel to emphasize [this] warning,” President Oaks said. “You live in a season where the adversary has become so effective at disguising truth that if you don’t have the Holy Ghost, you will be deceived. Many obstacles lie ahead. The distractions will be many. Even active members may sometimes have concerns about some historical, doctrinal, or social issues connected with the Church.”</h4>
+<img src="https://newsroom.churchofjesuschrist.org/media/960x540/_NE26143.jpg">
+<h6>Students line up outside the Marriott Center in Provo, Utah, on Tuesday, February 10, 2026, to hear from President Dallin H. Oaks of The Church of Jesus Christ of Latter-day Saints.</h6>
+<br>
+To help all Latter-day Saints “overcome present or future doubts,” President Oaks, the prophet and former BYU president (1971–1980), pointed to four simple actions that can help them come closer to the Savior.
+
+<ol>
+            <li>Strengthen our faith in Him.</li>
+            <li>Increase our humility.</li>
+            <li>Seek help from others.</li>
+            <li>Be patient.</li>
+        </ol>
+
+
+
+“Whatever those doubts, the way to overcome them is to get closer to our Savior Jesus Christ. Again and again, He has taught us that He is the way,” President Oaks said.</h4>
+<h3>Strengthen Our Faith</h3>
+President Oaks encouraged Latter-day Saints to develop faith in God and in the mission of His Son Jesus Christ.
+<br>
+
+“Strong faith requires more than strong desire,” he said. “It means daily trying, one step at a time, with prayer and scripture study. We can increase our commitment to the principles in the First Article of Faith.”
+<br>
+The prophet added that “these principles anchor our faith in God and will keep us anchored to gospel truth and to our Savior’s example of service to our fellowmen.”
+<br>
+ <iframe width="805" height="453" src="https://www.facebook.com/ChurchofJesusChrist?ref=embed_post" title="&quot;Coming Closer to Jesus Christ&quot; | President Dallin H. Oaks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ <h3>Increase Our Humility</h3>
+ Humility is key, President Oaks taught, because “when we are humble we can more clearly hear the Lord’s voice.” He also said, “look to the needs of others and humility follows.”
+
+Noting past teachings from Presidents Ezra Taft Benson and Spencer W. Kimball, President Oaks spoke of the importance of being teachable and submitting to God’s will.
+<img src="https://newsroom.churchofjesuschrist.org/media/1200x675/_36A2843.jpg">
+<h6>Students listen to a devotional address from President Dallin H. Oaks of The Church of Jesus Christ of Latter-day Saints in the Marriott Center in Provo, Utah, on Tuesday, February 10, 2026.</h6>
+<h5>“Humility is one of the powerful commandments we have been given to guide us in our mortal journeys, which prepares us for our appointed meeting with our Savior and Redeemer, Jesus Christ,” President Oaks said.
+</h5>
+<h5>“Take care not to become distracted,” he added.</h5>
+
+To those wavering in faith or who have stepped away from the Church because of something they have learned, President Oaks urged “humility, faith, and trust in the Lord.”
+<br>
+
+“Those of diminishing faith and activity in the restored Church are a major source of concern to your prophetic leaders,” he said. “We love you, young and old, men and women. So does the Lord! God is relentless in His loving pursuit of each of you. Keep the commandments and be true to the covenants so many of you have made to guide you along the covenant path. Never let your secular learning limit your horizons.”
+<img src="https://newsroom.churchofjesuschrist.org/media/1200x675/_E2_5850_1.jpg">
+<h6>A mother sits with her children in the concourse of the Marriott Center in Provo, Utah, on Tuesday, February 10, 2026, during a devotional from President Dallin H. Oaks of The Church of Jesus Christ of Latter-day Saints.</h6>
+<h3>Seek Help From Other Well-Informed Believers</h3>
+<h4>To help sift through the “abundance of speculation and false information in podcasts and on social media,” President Oaks urged Saints to “discuss your concerns with faithful well-informed friends and always take those concerns to the Lord.”</h4>
+
+<h4>He then shared an experience of a stake president on the BYU campus. A young man told this local leader he was leaving the Church.</h4>
+
+<h4>“The surprised stake president immediately began to share his profound testimony of the gospel that had brought him so much joy, peace and inspiration,” President Oaks said. “The young man sat stunned and stared back at him with tears in his eyes and said, ‘I have not heard anyone speak like that in months. I have been hanging out with friends who don’t believe.’”</h4>
+
+<img src="https://newsroom.churchofjesuschrist.org/media/1200x675/_NE26899.jpg">
+<h6>President Dallin H. Oaks of The Church of Jesus Christ of Latter-day Saints speaks to Brigham Young University students and faculty in the Marriott Center in Provo, Utah, on Tuesday, February 10, 2026.</h6>
+
+<h5>The upshot, the prophet said, is to “surround yourself with people who believe.” He also encouraged Latter-day Saints to attend weekly worship services and make regular attendance at a house of the Lord a priority.</h5>
+<h3>Be Patient</h3>
+<h5>Finally, President Oaks encouraged people to have patience with their spiritual development.</h5>
+<h5>“Overcoming doubt — resolving conflicts between the evolving understanding of science and the sometimes-incomplete teachings of religion can be a lengthy process, like building faith or acquiring humility,” he said.</h5>
+<h5>In the meantime, the prophet taught, we should focus on others.</h5>
+<h5>“We should busy ourselves with service,” he said. “Again and again, Jesus taught and demonstrated the power of service to others.”</h5>
+<img src="https://newsroom.churchofjesuschrist.org/media/1200x675/W2__9049.jpg">
+<h6>President Dallin H. Oaks of The Church of Jesus Christ of Latter-day Saints enters the Marriott Center in Provo, Utah, on Tuesday, February 10, 2026, assisted by Brigham Young University President C. Shane Reese (right).</h6>
     </body>
 
 </html>
