--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         </h1>
         <p>I'm a studen of informatica class.</p>
         <a href="./01-html-elements">HTML Elements</a>
-        <a href="./html-article">V:</a>
+        <a href="./html-article">articles</a>
     </body>
 </html>
